# datax-finance-flowertune

./: README.md  pyproject.toml
datax_flowertune/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
flowertune-eval-finance/: README.md  benchmarks.py  eval.py  utils.py
flowertune-eval-finance/benchmarks/: acc_fiqa_fl.txt  acc_fpb_fl.txt  acc_tfns_fl.txt  generation_fiqa_fl.jsonl  generation_fpb_fl.jsonl  generation_tfns_fl.jsonl
